disc07 pre-section

--- a/ds100/disc-sp25/disc02/disc02.ipynb
+++ b/ds100/disc-sp25/disc02/disc02.ipynb
@@ -44,6 +44,8 @@
    "id": "d60227e8",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1CGPeBfe1Obqr5DhOHwoCBtplzcTD6GEos8EoiEPKVvQ/edit?usp=sharing)\n",
+    "\n",
     "This discussion is all about practicing using `pandas`, and testing your knowledge about its various functionalities to accomplish small tasks.\n",
     "\n",
     "We will be using the `elections` dataset from lecture."
