--- a/ds100/disc-sp25/disc03/disc03.ipynb
+++ b/ds100/disc-sp25/disc03/disc03.ipynb
@@ -41,6 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1LAiLus5hmP8Zf3aXYhKrGfRhaufncixyx4dfwiEXMJ0/edit?usp=sharing)\n",
+    "\n",
     "::: {.callout-note}\n",
     "## Clarifications from Discussion\n",
     "- One way of determining whether a variable is **quantitative** or **qualitative ordinal** is to think about what the difference between levels indicate. \n",
