--- a/ds100/disc-sp25/disc04/disc04.ipynb
+++ b/ds100/disc-sp25/disc04/disc04.ipynb
@@ -43,6 +43,8 @@
    "id": "d8129f7e",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1juHg1jKsVhO4dPRu9xqz-XZ0LhqHRX59ziTh53htfk4/edit?usp=sharing)\n",
+    "\n",
     "## Regular Expressions\n",
     "\n",
     "Regular Expressions (RegEx for short) are an immensely powerful tool for parsing strings.\n",
