--- a/ds100/disc-sp25/disc05/disc05.ipynb
+++ b/ds100/disc-sp25/disc05/disc05.ipynb
@@ -43,6 +43,8 @@
    "id": "90bc3955",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1tG01Vk5fFSLahguai93LRctNI-uOURD8spgM8RzMT-k/edit?usp=sharing)\n",
+    "\n",
     "## Logarithmic Transformations\n",
     "\n",
     "Ishani is a development economist interested in studying the relationship between literacy rates\n",
