--- a/ds100/disc-sp25/disc06/disc06.ipynb
+++ b/ds100/disc-sp25/disc06/disc06.ipynb
@@ -43,6 +43,8 @@
    "id": "1ebf2d1d",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1S1pfolGsQU9k8VuZMThXjh3aLMQjFSJYx4-mvkTxYp8/edit?usp=sharing)\n",
+    "\n",
     "## Driving with a Constant Model\n",
     "\n",
     "Lillian is trying to use modeling to drive her car autonomously. To do this, she collects a lot\n",
