--- a/ds100/disc-sp25/disc07/disc07.ipynb
+++ b/ds100/disc-sp25/disc07/disc07.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "---\n",
-    "title: \"Models, OLS\"\n",
+    "title: \"Gradient Descent, Feature Engineering, Housing\"\n",
     "execute:\n",
     "  echo: true\n",
     "format:\n",
@@ -17,7 +17,7 @@
     "    code-fold: true\n",
     "    code-tools: true\n",
     "    toc: true\n",
-    "    toc-title: \"Models, OLS\"\n",
+    "    toc-title: \"Gradient Descent, Feature Engineering, Housing\"\n",
     "    page-layout: full\n",
     "    theme:\n",
     "      - cosmo\n",
@@ -41,6 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1F0IMB7RTXk-XbvDGfUlS13cwRPKp7pRtdv0HfZc2Irs/edit?usp=sharing)\n",
+    "\n",
     "## Dive into Gradient Descent\n",
     "\n",
     "We want to minimize the loss function $L(\\theta) = (\\theta_1-1)^2 + |\\theta_2-3|$. While you may notice that this function is not differentiable everywhere, we can still use gradient descent wherever the function *is* differentiable!\n",
@@ -441,13 +443,72 @@
     "values expensive properties.\n",
     "\n",
     "$\\Box$ **D.** An assessment process that systematically undervalues inexpensive properties and over-\n",
-    "values expensive properties."
+    "values expensive properties.\n",
+    "\n",
+    "<details>\n",
+    "<summary><b>Answer</b></summary>\n",
+    "\n",
+    "Findings can be used for Project A2, so explicit solutions will not be released for this question. However, here are some discussion points:\n",
+    "\n",
+    "* What is the definition of “fairness” in this context?\n",
+    "* Which individual or group of people are considered when we evaluate fairness?\n",
+    "* Are we talking about whether each situation above is fair to an individual home-\n",
+    "owner, a subgroup of society, or the whole society?\n",
+    "* At the level of the individual homeowner, any error can feel unfair: why am I be\n",
+    "over-/under-taxed?\n",
+    "* At the level of the society, is it fair to have a general over or underestimation that varies with the value of the home (a regressive or progressive tax scheme)?\n",
+    "\n",
+    "Other important things to note:\n",
+    "\n",
+    "* Some may feel that both regressive and progressive are unfair; that any systematic\n",
+    "errors should not depend at all on the value of the property\n",
+    "* It is possible to have a tax scheme that is systematically fair tax (i.e., not regressive\n",
+    "or progressive) but is still quite inaccurate and still generates errors for individual\n",
+    "homeowners. However, a tax scheme that generates no errors for homeowners will\n",
+    "also have no systematic unfairness.\n",
+    "* Unfairness of the second type (scenarios C and D) is a form of statistical bias that\n",
+    "varies as a function of y (the response variable).\n",
+    "\n",
+    "::: {.callout-note title=\"Points from Discussion\"}\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Suppose you created a model to predict property values (as you are doing presently!) and\n",
+    "wanted to understand whether your model’s predictions align more with Scenario C or D from\n",
+    "the last question. You decide to break down your data into different intervals depending on\n",
+    "the true Log Sale Price and compute the Root Mean Squared Error (RMSE) and percentage of\n",
+    "property values overestimated for each interval. Using this information, you create the plots\n",
+    "below:\n",
+    "\n",
+    "![Log Sale Price plots](images/plots.png)\n",
+    "\n",
+    "Which plot would be more useful in determining whether the model’s predicted property val-\n",
+    "ues align more with Scenario C or D? Provide a brief justification for your answer.\n",
+    "\n",
+    "<details>\n",
+    "<summary><b>Answer</b></summary>\n",
+    "\n",
+    "Again, findings here can be used for Project A2, so explicit solutions will not be released. However, some questions to consider:\n",
+    "\n",
+    "* How does the sign of the residual relate to whether a property is overvalued or\n",
+    "undervalued?\n",
+    "* Does a low RMSE necessarily mean a model’s predictions are more accurate?\n",
+    "* Does a low RMSE necessarily mean a model’s predictions are more \"fair\"?\n",
+    "* What is the difference between your answers to both questions?\n",
+    "\n",
+    "::: {.callout-note title=\"Points from Discussion\"}\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "</details>"
+   ]
   }
  ],
  "metadata": {
