--- a/ds100/disc-sp25/disc01/disc01.ipynb
+++ b/ds100/disc-sp25/disc01/disc01.ipynb
@@ -41,6 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### [Link to Slides](https://docs.google.com/presentation/d/1LdGcAguKYiFmvtjMQjIOfr0NFSJWmFaAU-I7EqRWaug/edit?usp=sharing)\n",
+    "\n",
     "## Linear Algebra Fundamentals\n",
     "\n",
     "Linear algebra is what powers linear regression, logistic regression, and PCA (concepts that we will be studying in this course). This question aims to build an understanding of how matrix-vector operations work. \n",
