--- a/ds100/disc-sp25/disc07/disc07.ipynb
+++ b/ds100/disc-sp25/disc07/disc07.ipynb
@@ -73,7 +73,7 @@
     "\\begin{align*}\n",
     "\\nabla L &= \\begin{bmatrix} \\frac{\\partial L}{\\partial \\theta_1} & \\frac{\\partial L}{\\partial \\theta_2} \\end{bmatrix}^T \\Bigr|_{\\substack{\\theta_1\n",
     "= \\hat{\\theta}_1, \\theta_2 = \\hat{\\theta}_2}} \\\\\n",
-    "&= [0, \\text{undefined}]\n",
+    "&= [0, \\text{undefined}]^T\n",
     "\\end{align*}\n",
     "\n",
     "::: {.callout-note}\n",
@@ -435,15 +435,16 @@
     "Which of the following scenarios strike you as unfair and why? You can choose more than\n",
     "one. There is no single right answer, but you must explain your reasoning.\n",
     "\n",
-    "$\\Box$ **A.** A homeowner those home is assessed at a higher price than it would sell for.\n",
     "\n",
-    "$\\Box$ **B.** A homeowner whose home is assessed at a lower price than it would sell for.\n",
+    "<label><input type=\"checkbox\" value=\"\"><b>A.</b> A homeowner those home is assessed at a higher price than it would sell for.</label>\n",
     "\n",
-    "$\\Box$ **C.** An assessment process that systematically overvalues inexpensive properties and under-\n",
-    "values expensive properties.\n",
+    "<label><input type=\"checkbox\" value=\"\"><b>B.</b> A homeowner whose home is assessed at a lower price than it would sell for.</label>\n",
     "\n",
-    "$\\Box$ **D.** An assessment process that systematically undervalues inexpensive properties and over-\n",
-    "values expensive properties.\n",
+    "<label><input type=\"checkbox\" value=\"\"><b>C.</b> An assessment process that systematically overvalues inexpensive properties and under-values expensive properties.</label>\n",
+    "\n",
+    "<label><input type=\"checkbox\" value=\"\"><b>D.</b> An assessment process that systematically undervalues inexpensive properties and over-\n",
+    "values expensive properties.</label>\n",
+    "\n",
     "\n",
     "<details>\n",
     "<summary><b>Answer</b></summary>\n",
@@ -469,7 +470,11 @@
     "* Unfairness of the second type (scenarios C and D) is a form of statistical bias that\n",
     "varies as a function of y (the response variable).\n",
     "\n",
-    "::: {.callout-note title=\"Points from Discussion\"}\n",
+    "::: {.callout-note title=\"Some comments/opinions from Discussion (not verbose)\"}\n",
+    "\n",
+    "* All are unfair! Mismatch between predicted vs actual creates unfairness.\n",
+    "* A, B are *not* unfair. It's inevitable that predicted $\\neq$ actual. It becomes unfair when there is *systematic* overvaluing or undervaluing, which can negatively affect many people.\n",
+    "* D is unfair because owners of undervalued inexpensive properties suffer from a smaller sale price, while owners of overvalued expensive properties can incur much more property tax.\n",
     "\n",
     ":::\n",
     "\n",
@@ -502,10 +507,6 @@
     "* Does a low RMSE necessarily mean a model’s predictions are more accurate?\n",
     "* Does a low RMSE necessarily mean a model’s predictions are more \"fair\"?\n",
     "* What is the difference between your answers to both questions?\n",
-    "\n",
-    "::: {.callout-note title=\"Points from Discussion\"}\n",
-    "\n",
-    ":::\n",
     "\n",
     "</details>"
    ]
